test/visibility/import/enablesUnqualified/multipleUnqualified/useAndImport-useOnly1c.good
useAndImport-useOnly1c.chpl:21: In function 'main':
useAndImport-useOnly1c.chpl:24: error: 'A' undeclared (first use this function)
